--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>React App Setup</title>
-  </head>
-  <body>
-    <div id="root">
+</head>
 
+<body>
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '501738386867737',
+                xfbml: true,
+                version: 'v2.11'
+            });
+            FB.AppEvents.logPageView();
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <div id="root">
     </div>
-  </body>
+</body>
+
 </html>
